--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,10 +3,10 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
     providers:
-        user_provider:
+        app_user_provider:
             entity:
                 class: App\Entity\User
-                property: email
+                property: username
 
 
     firewalls:
@@ -15,7 +15,7 @@ security:
             security: false
         main:
             lazy: true
-            provider: user_provider
+            provider: app_user_provider
             form_login:
                 login_path: app_login
                 check_path: app_login
