--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,7 @@ security:
 
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: /admin, roles: ROLE_ADMIN } # pas de ^ car pointe vers toutes les route contenant /admin
         - { path: ^/, roles: ROLE_USER }
 
 when@test:
