--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,10 +3,20 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
 
     providers:
-        app_user_provider:
+        app_user_provider_username:
             entity:
                 class: App\Entity\User
                 property: username
+        app_user_provider_email:
+            entity:
+                class: App\Entity\User
+                property: email
+        app_user_provider_combine:
+            chain:
+                providers:
+                    - app_user_provider_username
+                    - app_user_provider_email
+
 
 
     firewalls:
@@ -15,7 +25,7 @@ security:
             security: false
         main:
             lazy: true
-            provider: app_user_provider
+            provider: app_user_provider_combine
             form_login:
                 login_path: app_login
                 check_path: app_login
