Fix[DEV-01]: Modification chemin dans security.yaml de l'entité User

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
                 property: username
         app_user_provider_email:
             entity:
-                class: App\Entity\User
+                class: App\Entity\Authentication\User
                 property: email
         app_user_provider_combine:
             chain:
