[DEV-02]: Ajout du Remember me

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,6 +29,9 @@ security:
                 check_path: app_login
             logout:
                 path: /logout
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
 
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
