--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,7 @@ security:
 
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: /forgottenpass, roles: PUBLIC_ACCESS}
         - { path: /admin, roles: ROLE_ADMIN } # pas de ^ car pointe vers toutes les route contenant /admin
         - { path: ^/, roles: ROLE_USER }
 
